rnd/k8s/app/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: app
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 4000
